@@ -1,3 +1,8 @@
+Wed Apr 19 13:25:56 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* func-proto.h: Remove global_context hack. Added prototype for
+		krb5_set_default_realm.
+
 Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)
 
         * asn1.h, ccache.h, encryption.h, func-pro.h, hostaddr.h, keytab.h,
